# hn.fm

./: .dockerignore  .env  .env.example  .gitignore  ARTICLE.md  Dockerfile  ENHANCED_FRONTEND_README.md  ENHANCED_SYSTEM_README.md  FIRECRAWL_TESTING_README.md  GEMINI.md  Makefile  OPENAPI_DOCUMENTATION.md  PRD.md  PROMPTS_GUIDE.md  README.md  ROADMAP.md  VIDEO_GENERATION_README.md  config.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  generate_audio.py  processed_Starting_game_development_in_J.md  prompts_template.json  pyproject.toml  raw_scraped_Starting_game_development_in_J.md  run_asr_step.py  run_pipeline.py  run_text_only_pipeline.py  run_video_step.py  run_web_server.py  scraped_content_1.md  start_celery_beat.py  start_celery_worker.py  start_flower.py  test_asr_error_details.py  test_asr_with_audio.py  test_config.py  test_docker_setup.py  (+6 more)
.cursor/rules/: commands.mdc  frontend.md
docs/: HYPERFRAMES.md
documentation/: AUTORELOAD_README.md  CONTENT_STRUCTURE_README.md  DEVELOPMENT.md  DOCKER_README.md  ENHANCED_FRONTEND_README.md  ENHANCED_SYSTEM_README.md  FIRECRAWL_TESTING_README.md  IMAGE_GENERATION_README.md  OPENAPI_DOCUMENTATION.md  PROMPTS_GUIDE.md  README.md  SIMPLE_ROADMAP.md  SURVEY.md  TEST_COVERAGE_README.md  TTS_PIPELINE_README.md  VIDEO_GENERATION_README.md  WEB_UI_README.md  test_delete_functionality.md
frontend/: .eslintignore  content.config.ts  eslint.config.mjs  nuxt.config.ts  package.json
frontend/app/: app.vue  error.vue
frontend/app/components/: ContentList.vue  Pagination.vue  PipelineDashboard.vue  SegmentCard.vue
frontend/app/layouts/: default.vue
frontend/app/pages/: admin.vue  articles.vue  index.vue  observability.vue  segments.vue  services.vue  test-api.vue
outputs/: script_How_to_Start_Making_Games_in_J.txt  script_meta_How_to_Start_Making_Games_in_J.json  tts_lines_How_to_Start_Making_Games_in_J.txt
pipeline-guide/: README.md  cards.html  pipeline.html
scripts/: port-forwards.sh
services/dia/: README.md  server.py
services/hyperframes/: Dockerfile  server.mjs
services/whisperx/: README_WHISPERX_API.md  client.py  index.html  requirements.txt  script.js  server.py  styles.css  test_audio.py  whisperx_results_20250822_230133.json
src/hnfm/: __init__.py
src/hnfm/audio/: __init__.py  asr_service.py  audio_processor.py  audio_utils.py  music_service.py  studio_voice_service.py  tts_api_service.py  tts_service.py
src/hnfm/content/: __init__.py  art_direction.py  content_curator.py  content_enrichment.py  content_manager.py  content_processor.py  image_prompt_generator.py  llm_service.py  meta_sequencer.py  script_generator.py  sequence_planner.py
src/hnfm/hyperframes/: compositions.py  design_identity.py  produce.py  render_client.py
src/hnfm/image/: image_service_factory.py  invokeai.py  invokeai_image_service.py
src/hnfm/pipeline/: __init__.py  enhanced_pipeline_manager.py  pipeline_manager.py  pipeline_manager_old.py
src/hnfm/scraper/: __init__.py  content_scraper.py  hn_scraper.py  hn_service.py  source_images.py
src/hnfm/scripts/: __init__.py  generate_audio.py  run_asr_step.py  run_pipeline.py  run_text_only_pipeline.py  run_video_step.py  run_web_server.py  start_celery_beat.py  start_celery_beat_autoreload.py  start_celery_worker.py  start_celery_worker_autoreload.py  start_flower.py
src/hnfm/test/: README.md  README_SIMPLE.md  __init__.py  debug_service_locks.py  manual_testing_guide.py  test_api.py  test_asr_error_details.py  test_asr_timeout.py  test_asr_with_audio.py  test_audio_integration.py  test_audio_utils.py  test_celery.py  test_config.py  test_content_api.py  test_datetime_serialization.py  test_e2e_workflow.py  test_enhanced_frontend.py  test_enhanced_pipeline_integration.py  test_enhanced_system.py  test_enhanced_tasks.py  test_error_response_serialization.py  test_firecrawl_integration.py  test_firecrawl_quick.py  test_frontend_integration.py  test_full_pipeline.py  test_hn_utils.py  test_image_generation.py  test_image_generator.py  test_integration.py  test_pipeline.py  test_pipeline_with_images.py  test_run_api.py  test_run_tasks.py  test_run_utils.py  test_scraper.py  test_script_generator.py  test_segment_api.py  test_segment_tasks.py  test_segment_utils.py  test_tasks.py  (+5 more)
src/hnfm/utils/: __init__.py  config.py  filename_utils.py  hn_utils.py  logger.py  metrics.py  run_utils.py  segment_utils.py  (+2 more)
voices/notebooklm/: sample.txt
(+45 files in other folders)
