[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hnfm"
version = "0.1.0"
description = "Transform Hacker News into your personalized AI-powered podcast"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Brian Caffey", email = "brian@example.com"}
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "markdown>=3.5.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "feedparser>=6.0.0",
    # Web API Dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.0",
    "jinja2>=3.1.0",
    # Audio Processing Dependencies
    "pydub>=0.25.1",
    "gradio-client>=0.10.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "soundfile>=0.12.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    # LLM and Agent Dependencies
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "langgraph>=0.2.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "tiktoken>=0.6.0",
    "tenacity>=8.2.0",
    "pydantic-settings>=2.0.0",
    "Pillow>=10.0.0",
    "celery[redis]>=5.5.3",
    "flower>=2.0.1",
    # Jupyter/iPython Notebook Dependencies
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "notebook>=7.0.0",
    "jupyterlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pre-commit>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/briancaffey/hn.fm"
Repository = "https://github.com/briancaffey/hn.fm.git"

[tool.hatch.build.targets.wheel]
packages = ["src/hnfm"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "fakeredis>=2.31.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["src/hnfm/test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "pipeline: pipeline functionality tests",
    "api: API and web server tests",
    "integration: end-to-end workflow tests"
]

[tool.coverage.run]
source = ["src/hnfm"]
omit = [
    "*/test/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
    "*/env/*",
    "*/site-packages/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2


